--- a/data.yaml
+++ b/data.yaml
@@ -2745,7 +2745,10 @@ library:
     cppreference-description: Monadic Operations in {{lc|std::optional}}
   support:
     clang: null
-    gcc: null
+    gcc:
+    - since: C++23
+      depends: __cpp_lib_concepts
+      value: 202110
     msvc: null
 - name: __cpp_lib_move_only_function
   header_list: functional
@@ -2755,7 +2758,9 @@ library:
     cppreference-description: '{{lc|std::move_only_function}}'
   support:
     clang: null
-    gcc: null
+    gcc:
+    - since: C++23
+      value: 202110
     msvc: null
 - name: __cpp_lib_node_extract
   header_list: map set unordered_map unordered_set
@@ -2839,6 +2844,8 @@ library:
     gcc:
     - since: C++17
       value: 201606
+    - since: C++20
+      value: 202106
     msvc:
     - since: C++17
       value: 201606
@@ -3314,7 +3321,10 @@ library:
     cppreference-description: '{{lc|std::basic_string::resize_and_overwrite}}'
   support:
     clang: null
-    gcc: null
+    gcc:
+    - since: C++23
+      depends: _GLIBCXX_USE_CXX11_ABI
+      value: 202110
     msvc: null
 - name: __cpp_lib_string_udls
   header_list: string
@@ -3618,6 +3628,9 @@ library:
     gcc:
     - since: C++17
       value: 202102
+    - since: C++20
+      depends: __cpp_concepts
+      value: 202106
     msvc:
     - since: C++17
       value: 202102
