--- a/data.yaml
+++ b/data.yaml
@@ -3247,7 +3247,10 @@ library:
     cppreference-description: '{{ltt|cpp/io/basic_spanbuf|std::spanbuf}}, {{ltt|cpp/io/basic_spanstream|std::spanstream}}'
   support:
     clang: null
-    gcc: null
+    gcc:
+    - since: C++23
+      depends: __cpp_lib_span
+      value: 202106
     msvc:
     - since: C++23
       value: 202106
