--- a/data.yaml
+++ b/data.yaml
@@ -795,7 +795,9 @@ language:
       operator]]
   support:
     clang: null
-    gcc: null
+    gcc:
+    - since: C++23
+      value: 202110
     msvc: null
 - name: __cpp_namespace_attributes
   rows:
