--- a/data.yaml
+++ b/data.yaml
@@ -1634,7 +1634,9 @@ library:
     clang:
     - since: C++23
       value: 202110
-    gcc: null
+    gcc:
+    - since: C++23
+      value: 202110
     msvc:
     - since: C++23
       value: 202110
