--- a/data.yaml
+++ b/data.yaml
@@ -1954,7 +1954,9 @@ library:
     cppreference-description: Constexpr for {{lc|1=std::type_info::operator==}}
   support:
     clang: null
-    gcc: null
+    gcc:
+    - since: C++23
+      value: 202106
     msvc: null
 - name: __cpp_lib_constexpr_utility
   header_list: utility
