--- a/data.yaml
+++ b/data.yaml
@@ -3671,7 +3671,7 @@ library:
     - since: C++17
       value: 202102
     - since: C++20
-      depends: __cpp_concepts
+      depends: defined(_GLIBCXX_HAVE_COND_TRIVIAL_SPECIAL_MEMBERS)
       value: 202106
     msvc:
     - since: C++17
