--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -16,7 +16,7 @@ jobs:
             - uses: actions/checkout@v2
             - uses: actions/setup-python@v2
               with:
-                  python-version: 3.10
+                  python-version: '3.10'
             - name: Install PyYAML
               run: pip install pyyaml
             - name: Install Clang
@@ -46,7 +46,7 @@ jobs:
             - uses: actions/checkout@v2
             - uses: actions/setup-python@v2
               with:
-                  python-version: 3.10
+                  python-version: '3.10'
             - name: Install PyYAML
               run: pip install pyyaml
 
@@ -113,7 +113,7 @@ jobs:
             - uses: actions/checkout@v2
             - uses: actions/setup-python@v2
               with:
-                  python-version: 3.9
+                  python-version: '3.10'
             - name: Install PyYAML
               run: pip install pyyaml
             - name: Install MSVC
@@ -157,4 +157,5 @@ jobs:
 
             - name: Test MSVC STL with Clang
               run: python tools/do_test.py msvc library --verbose
-                    --cc clang-cl --extra-args -diagnostics:classic
+                    --cc clang-cl
+                    --extra-args -Xclang -fms-compatibility-version=0 -diagnostics:classic
