--- a/data.yaml
+++ b/data.yaml
@@ -3680,7 +3680,7 @@ library:
     - since: C++17
       value: 202102
     - since: C++20
-      depends: defined(_GLIBCXX_HAVE_COND_TRIVIAL_SPECIAL_MEMBERS)
+      depends: __cpp_concepts >= 202002L
       value: 202106
     msvc:
     - since: C++17
